# PixelWarRemake

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: server.example.json
docs/: deployment.md  openapi.yaml  testing.md
include/pixelwar/config/: ServerConfig.hpp
include/pixelwar/controllers/: ApiController.hpp  StaticController.hpp
include/pixelwar/http/: HttpServer.hpp  HttpTypes.hpp  Router.hpp
include/pixelwar/models/: User.hpp
include/pixelwar/security/: PasswordHasher.hpp  RateLimiter.hpp  SessionManager.hpp
include/pixelwar/storage/: AuditLog.hpp  MapBackup.hpp  PixelHistory.hpp  PixelMap.hpp  UserStore.hpp
include/pixelwar/utils/: Base64.hpp  HttpsClient.hpp  Json.hpp  Random.hpp  Sha256.hpp  ThreadPool.hpp
public/: admin.html  admin.js  app.js  index.html  site.webmanifest  styles.css
scripts/: build.cmd  build.ps1  configure-discord.ps1  configure-oidc.ps1  k6-pixel-smoke.js  run.cmd  run.ps1  test.cmd  test.ps1
src/: main.cpp
src/config/: ServerConfig.cpp
src/controllers/: ApiController.cpp  StaticController.cpp
src/http/: HttpServer.cpp  HttpTypes.cpp  Router.cpp
src/models/: User.cpp
src/security/: PasswordHasher.cpp  RateLimiter.cpp  SessionManager.cpp
src/storage/: AuditLog.cpp  MapBackup.cpp  PixelHistory.cpp  PixelMap.cpp  UserStore.cpp
src/utils/: Base64.cpp  HttpsClient.cpp  Json.cpp  Random.cpp  Sha256.cpp  ThreadPool.cpp
tests/: minicatch.hpp  test_core.cpp
